# 0.00.31 (57080) Sep 29, 2011
Flow tab: Changed flow speed calculation from speed = flowRate / crossSectionalHeight to speed = flowRate / crossSectionalArea
# 0.00.30 (57029) Sep 29, 2011
Water tower: Control the hose with handles instead of dragging the hose itself
Water tower: Start the tank partly full so that the "fill" button and faucet slider are initially enabled
# 0.00.29 (56846) Sep 22, 2011
Water tower: Added new handle image from NP
Flow tab: Made the red stripe go all the way to the edges, since friction is accounted for elsewhere
Pressure tab: Made pool gradient darker so it doesn't blend in with the air too much
# 0.00.28 (56834) Sep 22, 2011
Water tower: Fixed: Water drops go in front of the ground
# 0.00.27 (56770) Sep 20, 2011
Fluid flow: Fixed: Velocity sensor disappears if the blue velocity arrow overlaps the toolbox when dropped
# 0.00.26 (56717) Sep 19, 2011
Fluid flow: Fixed: speed doesn't update when dragging fluid flow slider or toggling friction
# 0.00.25 (56688) Sep 19, 2011
Fluid flow: Fixed: Exception when setting fluid flow rate to zero
# 0.00.24 (56682) Sep 19, 2011
Fluid flow: Fixed: Exception when dragging the fluid flow rate slider on mac
# 0.00.23 (56552) Sep 14, 2011
# 0.00.22 (56499) Sep 13, 2011
Water tower: Made the velocity sensor read out "-" instead of "0.00" when not over a moving fluid
Water tower: Ignore speed readout for water coming out of the faucet
Water tower: Fixed: Speed for water coming out of the faucet varies erratically
# 0.00.21 (56380) Sep 9, 2011
Pressure tab: When in "atmospheres" units, use metric for fluid density
Water tower: Made the "fill" button match size, font and color of the "reset all" button
# 0.00.20 (56353) Sep 9, 2011
Flow tab: Improved performance by about 30% by using Collections.min instead of Collections.sort
Water tower: Don't start the tank at the maximum height so the user can drag it up and down
Water tower: Added a button to fill up the water tank